<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.graphics</groupId>
  <artifactId>JavaGraphics</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>
  <name>JavaGraphics</name>
  <description>Software 3D engine</description>
  
  	<properties>
  		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    	<aspectj.version>1.9.1</aspectj.version>
  	</properties>
  
	<dependencies>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>2.9.9</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.9.9</version>
		</dependency>
		<dependency>
		    <groupId>com.google.guava</groupId>
		    <artifactId>guava</artifactId>
		    <version>23.0</version>
		</dependency>
		<dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-lang3</artifactId>
		    <version>3.8.1</version>
		</dependency>
		<dependency>
		    <groupId>commons-io</groupId>
		    <artifactId>commons-io</artifactId>
		    <version>2.6</version>
		</dependency>
		<dependency>
    <groupId>org.aspectj</groupId>
	    <artifactId>aspectjrt</artifactId>
	    <version>${aspectj.version}</version>
	</dependency>
	<dependency>
	    <groupId>io.reactivex.rxjava2</groupId>
	    <artifactId>rxjava</artifactId>
	    <version>2.2.2</version>
	</dependency>
	<dependency>
	    <groupId>junit</groupId>
	    <artifactId>junit</artifactId>
	    <version>4.12</version>
	    <scope>test</scope>
	</dependency>
	</dependencies>
  <build>

    <plugins>  
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.5.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
	  <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.0.0-M3</version>
      </plugin>
      <plugin>
	    <groupId>org.codehaus.mojo</groupId>
	    <artifactId>aspectj-maven-plugin</artifactId>
	    <version>1.4</version>
	    <executions>
	      <execution>
	        <goals>
	          <goal>compile</goal>
	        </goals>
	      </execution>
	    </executions>
	    <dependencies>
	      <dependency>
	        <groupId>org.aspectj</groupId>
	        <artifactId>aspectjrt</artifactId>
	        <version>${aspectj.version}</version>
	      </dependency>
	      <dependency>
	        <groupId>org.aspectj</groupId>
	        <artifactId>aspectjtools</artifactId>
	        <version>${aspectj.version}</version>
	      </dependency>
	    </dependencies>
	    <configuration>
	      <source>1.8</source>
	      <target>1.8</target>
	      <forceAjcCompile>true</forceAjcCompile>
	    </configuration>
	  </plugin>
	  <plugin>
	    <groupId>org.apache.maven.plugins</groupId>
	    <artifactId>maven-assembly-plugin</artifactId>
	    <executions>
	        <execution>
	            <phase>package</phase>
	            <goals>
	                <goal>single</goal>
	            </goals>
	            <configuration>
	                <archive>
	                <manifest>
	                    <mainClass>
	                        com.graphics.tests.GraphicsTest
	                    </mainClass>
	                </manifest>
	                </archive>
	                <descriptorRefs>
	                    <descriptorRef>jar-with-dependencies</descriptorRef>
	                </descriptorRefs>
	            </configuration>
	        </execution>
	    </executions>
	</plugin>
    </plugins>

  </build>
</project>